[WTF] holdLock should be marked WARN_UNUSED_RETURN https://bugs.webkit.org/show_bug.cgi?id=196922

Reviewed by Keith Miller.

Source/JavaScriptCore:

There was one case where holdLock was used and the result ignored.
From a comment that was deleted in https://bugs.webkit.org/attachment.cgi?id=328438&action=prettypatch, I believe that it is on purpose.
So I brought back a variant of the comment, and made the ignoring of the return explicit.

* heap/BlockDirectory.cpp:
(JSC::BlockDirectory::isPagedOut):

Source/WTF:

* wtf/Locker.h:


Canonical link: https://commits.webkit.org/211239@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@244352 268f45cc-cd09-0410-ab3c-d52691b4dbfc